[package]
name = "aurora"
version = "0.0.1"
authors = ["Luke Street <luke@street.dev>"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["staticlib"]

#[[bin]]
#name = "metaforce"
#path = "src/main.rs"

[dependencies]
cxx = "1.0.64"
env_logger = "0.9.0"
pollster = "0.2.4"
binrw = "0.8.4"
modular-bitfield = "0.11.2"
num-traits = "0.2.14"
num_enum = "0.5.6"
bytemuck = "1.7.3"
bytemuck_derive = "1.0.1"
log = "0.4.14"
log-panics = "2.0.0"
cgmath = "0.18.0"
smallvec = "1.7.0"
scopeguard = "1.1.0"
twox-hash = "1.6.2"
winit = "0.26.1"
# custom sdl2
sdl2 = { git = "https://github.com/encounter/rust-sdl2.git", rev = "f39d7a7549fd59bebb1fb42ec12973200bb3080b", features = ["no-link", "hidapi"] }

[dependencies.imgui]
git = "https://github.com/imgui-rs/imgui-rs"
rev = "55a76370466953d5c044afc123330d0262b50e17"
[dependencies.imgui-winit-support]
git = "https://github.com/imgui-rs/imgui-rs"
rev = "55a76370466953d5c044afc123330d0262b50e17"
default-features = false
features = ["winit-26"]
[patch.'https://github.com/imgui-rs/imgui-rs']
imgui-sys = { path = "../imgui-sys" }
[patch.crates-io]
imgui-sys = { path = "../imgui-sys" }
naga = { git = "https://github.com/gfx-rs/naga", rev = "d6f8958b346676396db97053771b8d95684c47ee" }

[dependencies.wgpu]
#path = "../../wgpu/wgpu"
git = "https://github.com/gfx-rs/wgpu"
rev = "766c6cda1917c1265fa8a5f610ef7516d4314d1b"
features = ["spirv"]

#[patch.'https://github.com/gfx-rs/naga']
#naga = { path = "../../naga" }

[build-dependencies]
#naga = { path = "../../naga", features = ['spv-out', 'wgsl-in'] }
naga = { git = "https://github.com/gfx-rs/naga", rev = "d6f8958b346676396db97053771b8d95684c47ee", features = ['spv-out', 'wgsl-in'] }
bytemuck = "1.7.3"
cxx-build = "1.0.64"
bindgen = "0.59.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10.1"
ndk-glue = "0.5.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
wgpu-subscriber = "0.1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wasm-bindgen-futures = "0.4.28"
#features = ["web-sys"]
